@@ -20,12 +20,10 @@ import org.elasticsearch.rest.RestRequest;
 import org.elasticsearch.rest.RestStatus;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
-import static java.util.Collections.singletonList;
 import static org.elasticsearch.rest.RestRequest.Method.GET;
 
 /**
@@ -78,18 +76,17 @@ public class TestDeprecationHeaderRestAction extends BaseRestHandler {
     }
 
     @Override
-    public List<DeprecatedRoute> deprecatedRoutes() {
-        return singletonList(new DeprecatedRoute(GET, "/_test_cluster/deprecated_settings", DEPRECATED_ENDPOINT));
-    }
-
-    @Override
     public String getName() {
         return "test_deprecation_header_action";
     }
 
     @Override
     public List<Route> routes() {
-        return Collections.emptyList();
+        return List.of(
+            // note: RestApiVersion.current() is acceptable here because this is test code -- ordinary callers of `.deprecated(...)`
+            // should use an actual version
+            Route.builder(GET, "/_test_cluster/deprecated_settings").deprecated(DEPRECATED_ENDPOINT, RestApiVersion.current()).build()
+        );
     }
 
     @SuppressWarnings("unchecked") // List<String> casts
